[metadata]
name = pfhub
description-file = README.md
description = Phase Field Community Hub Python Module
author = Daniel Wheeler
author_email = daniel.wheeler2@gmail.com
url = https://github.com/usnistgov/pfhub
license_files = ../../LICENSE.md

[options]
install_requires =
    numpy
    pytest
    toolz
    pyyaml
    pandas
    plotly
    pytest-cov

[tool:pytest]
testpaths = pfhub
addopts = --doctest-modules --ignore=setup.py -r s --cov=pfhub/ --cov-report term-missing --no-cov-on-fail --cov-config .coveragerc

[flake8]
ignore = E731, W503
max-line-length = 88
