[metadata]
name = pfhub
description-file = README.md
description = Phase Field Community Hub Python Module
author = Daniel Wheeler
author_email = daniel.wheeler@nist.gov
url = https://github.com/usnistgov/pfhub
license_files = ../../LICENSE.md

[options]
install_requires =
    numpy
    pytest
    toolz
    pyyaml
    pandas
    plotly
    pytest-cov
    click
    nbval
    dotwiz==0.2.0
    chevron
    scipy
    requests_cache
    requests_mock
    jinja2
    itables
    click-params
    pykwalify
    ruamel.yaml==0.17.21
    requests
    greenlet==2.0.1 # crazy linkml dependency
    linkml

[options.entry_points]
console_scripts=
    pfhub = pfhub.scripts.cli:cli

[tool:pytest]
testpaths = pfhub notebooks
addopts = --doctest-modules --ignore=setup.py -r s --cov=pfhub/ --cov-report term-missing --no-cov-on-fail --cov-config .coveragerc --nbval --sanitize-with notebooks/sanitize.cfg

[flake8]
ignore = E731, W503
max-line-length = 88


[versioneer]
VCS = git
style = pep440
versionfile_source = pfhub/_version.py
versionfile_build = pfhub/_version.py
tag_prefix = v
parentdir_prefix =
